[tool.poetry]
packages = [
    { include = "spikespy" }
]
name="spikespy"
version = "0.1.10"
description = ""
authors = ["Aidan Nickerson"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
mistune = "^0.8.4"
neo = "^0.12.0"
numpy = "^1.24,<1.25"
plotly = "^5"
tqdm = "^4.61.2"
nixio = "^1.5.2"
h5py = "^3.6.0"
scipy = "^1.8.0"
numba = ">=0.57.1"
PyWavelets = "^1.3.0"
pytest = "^7.2.0"
PySide6-QtAds = "^4.0.0"
QtPy = "^2.3.0"
matplotlib = "^3.6.2"
PySide6 = "^6.4.1"
open-ephys-python-tools = "^0.1.4"
pynwb = "^2.3.2"




[tool.poetry.dev-dependencies]
black = "^22.12.0"
pyinstaller = "^5.13.2"
pyinstaller-hooks-contrib = "^2022.3"

ipython = "^8.4.0"
pytest = "^7.2.0"
pytest-qt = "^4.2.0"
ipykernel = "^6.21.3"

[tool.poetry.scripts]
spikespy= "spikespy.SpikeSpy:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
