[project]
name = "spikespy"
version = "0.1.12"
description = ""
authors = [{ name = "Aidan Nickerson" }]
requires-python = ">=3.9,<3.13"
dependencies = [
    "mistune>=0.8.4,<0.9",
    "neo>=0.13.3,<0.14",
    "numpy>=1.26.4,<2",
    "plotly>=5,<6",
    "tqdm>=4.61.2,<5",
    "nixio>=1.5.2,<2",
    "h5py>=3.6.0,<4",
    "scipy>=1.8.0,<2",
    "numba>=0.57.1",
    "PyWavelets>=1.3.0,<2",
    "pytest>=7.2.0,<8",
    "PySide6-QtAds>=4.3.0.2,<5",
    "QtPy>=2.3.0,<3",
    "matplotlib>=3.6.2,<4",
    "PySide6<6.7.3",
    "open-ephys-python-tools>=0.1.4,<0.2",
    "pynwb>=2.3.2,<3",
]

[project.scripts]
spikespy = "spikespy.SpikeSpy:run"

[dependency-groups]
dev = [
    "black>=22.12.0,<23",
    "ipython>=8.4.0,<9",
    "pytest>=7.2.0,<8",
    "pytest-qt>=4.2.0,<5",
    "ipykernel>=6.21.3,<7",
    "ipython>=8.11.0,<9",
]

[tool.hatch.build.targets.sdist]
include = ["spikespy"]

[tool.hatch.build.targets.wheel]
include = ["spikespy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
