[project]
name = "spikespy"
version = "0.1.13"
description = ""
authors = [{ name = "Aidan Nickerson" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "mistune>=0.8.4,<0.9",
    "neo>=0.14.0,<0.15",
    "numpy>=2.2.0,<2.3",
    "tqdm>=4.61.2,<4.62",
    "nixio>=1.5.2,<1.6",
    "numba>=0.61,<0.62",
    "pytest>=7.2.0,<7.3",
    "PySide6-QtAds>=4.3.0.2,<4.4",
    "QtPy>=2.3.0,<2.4",
    "PySide6>=6.7.0,<6.7.3",
    "open-ephys-python-tools>=0.1.4,<0.1.5",
    "pynwb>=2.3.2,<2.4",
    "h5py>=3.13.0",
    "matplotlib>=3.10.1",
    "pywavelets>=1.8.0",
    "scipy>=1.15.2",
]

[project.scripts]
spikespy = "spikespy.SpikeSpy:run"

[dependency-groups]
dev = [
    "black>=22.12.0,<23",
    "ipython>=8.4.0,<9",
    "pytest>=7.2.0,<8",
    "pytest-qt>=4.2.0,<5",
    "ipykernel>=6.21.3,<7",
    "ipython>=8.11.0,<9",
]

[tool.hatch.build.targets.sdist]
include = ["spikespy"]

[tool.hatch.build.targets.wheel]
include = ["spikespy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
